tenzir/bats/data/reference/from_to/test_to_failure/step_02.ref
error: no known format for extension `.extension`
 --> <input>:1:12
  |
1 | to "failure.extension.bz2"
  |            ^^^^^^^^^^ 
  |
  = note: supported extensions for format deduction: `arrow`, `csv`, `feather`, `json`, `jsonl`, `ndjson`, `pcap`, `ssv`, `tsv`, `yaml`
  = hint: you can pass a pipeline to handle compression and format
  = docs: https://docs.tenzir.com/reference/operators/to